[package]
name = "openpty"
version = "0.1.2"
authors = ["Milkey Mouse <milkeymouse@meme.institute>"]
edition = "2018"
description = "Rust implementation of libc openpty()"
readme = "README.md"
repository = "https://github.com/milkey-mouse/openpty/"
license = "MIT OR Apache-2.0"

[dependencies]
libc = "0.2.66"
nix = "0.16.1"
